--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>QR Generator Pro</p>
+        <p>QR Generator Pro by jureczk</p>
     </footer>
 
     <!-- Toast -->
@@ -233,3 +233,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
