--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                     
                     <div class="btn-group">
                         <button id="chain-prev" class="btn btn-secondary">◀ Prev</button>
+                        <button id="chain-pause" class="btn btn-secondary">⏸️ Pause</button>
                         <button id="chain-next" class="btn btn-secondary">Next ▶</button>
                     </div>
                     
@@ -250,7 +251,7 @@
                         ✕ Stop Transfer
                     </button>
                 </div>
-            </div>
+
 
             <!-- Upload Database -->
             <div class="card">
