--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                     <div id="search-results" class="search-results-list"></div>
                 </div>
 
-                <!-- Add Entry Button -->
-                <button id="show-add-entry" class="btn btn-secondary btn-block" style="margin-bottom: 16px;">
+                <!-- Add Entry Button - MOVED OUTSIDE THE CARD -->
+                <button id="show-add-entry" class="btn btn-secondary btn-block">
                     ➕ Add New Entry
                 </button>
 
@@ -142,6 +142,7 @@
                 </div>
             </div>
         </section>
+
 
         <!-- ========== SCAN TAB ========== -->
         <section id="scan-tab" class="tab-content">
