--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Libraries from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
+    <script src="https://unpkg.com/@nicolo-ribaudo/barcode-reader@0.1.0/dist/barcode-reader.umd.js"></script>
+
 </head>
 <body>
     
@@ -352,7 +354,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>QR Generator Pro</p>
+        <p>QR Generator Pro by jureczk</p>
     </footer>
 
     <!-- Toast -->
